Fixed text alignment in about us

--- a/style/style.css
+++ b/style/style.css
@@ -640,9 +640,10 @@ article {
 .main-description p{
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
-    text-align: center;
+    text-align: left;
     line-height: 1.6rem;
     letter-spacing: -0.03rem;
+    margin: 0 5rem;
 }
 
 .container-devs{
